# gECC

./: .gitignore  CMakeLists.txt  ECDSA_CORRECTNESS_TEST.md  FIXED_POINT_ANALYSIS.md  FIXED_POINT_SOLUTION.md  README.md  bench.sh
dev-support/: build.py
include/: gecc.h
include/gecc/: arith.h  common.h  ecdsa.h  hash.h  support.h  util.h
include/gecc/arith/: batch_ec.h  digit.h  ec.h  fp.h  gccl.h  layout.h  multiplicative_chain.h
include/gecc/arith/details/: fp_mont_add_sub.h  fp_mont_inverse.h  fp_mont_multiply.h
include/gecc/ecdsa/: gsv.h
include/gecc/hash/: sha256.h
include/gecc/util/: ec_util.h
scripts/: ccgen.py  constants.py  constants_generator.py  ec.py  ec_ops.py  ec_test.sage  field.py  mod_sqrt.py  verify_gpu_output.py  verify_new_test_points.py
test/: CMakeLists.txt  batch_ec_add_correctness.cu  batch_ec_fpmul_correctness.cu  batch_ec_pmul_correctness.cu  batch_pmul_sha256_test.cu  ec_ops.cu  ec_util_test.cu  ecdsa_ec_fixed_pmul.cu  ecdsa_ec_unknown_pmul.cu  ecdsa_sign.cu  ecdsa_sign_baseline.cu  ecdsa_verify.cu  ecdsa_verify_baseline.cu  fp.cu  modinv_data_parallel_profiling.cu  sha256_test.cu
